--- a/examples/env-chronos.yml
+++ b/examples/env-chronos.yml
@@ -3,7 +3,7 @@ default_job: &DEFAULT_JOB
   kind: Chronos
   environment: override me
   cronos_spec: &DEFAULT_SPEC
-    name: "ray-test-{{ENV}}"
+    name: "ray-test-{{DEPLOY_ENV}}"
     schedule: "R/2015-01-25T21:00/PT24H"
     scheduleTimeZone: "PST"
     owner: "rjohnson@yp.com"
@@ -17,30 +17,46 @@ default_job: &DEFAULT_JOB
     environmentVariables: 
       - 
         name: "LOG_LOCATION"
-        value: "/var/{{ENV}}"
+        value: "/var/{{DEPLOY_ENV}}"
     forcePullImage: false
     command: "echo \"log here: $LOG_LOCATION\"; echo \"ENV: $DEPLOY_ENV\";sleep 10; echo bye"
 
 version: alpha1
-environments_var: DEPLOY_ENV
-environments:
-  - dev
-  - test
-  - prod
+environment_vars:
+  DEPLOY_ENV:
+    - dev
+    - test
+    - prod
+  COLO:
+    - west
+    - east
 applications:
   - <<: *DEFAULT_JOB
     environment: dev
+    DEPLOY_ENV: dev
+    COLO: east
     cronos_spec:
       <<: *DEFAULT_SPEC
       schedule: "R/2015-08-01T21:00/PT24H"
       forcePullImage: true
   - <<: *DEFAULT_JOB
     environment: test
+    DEPLOY_ENV: test
+    COLO: east
     cronos_spec:
       <<: *DEFAULT_SPEC
       schedule: "R/2015-08-01T21:10/PT24H"
   - <<: *DEFAULT_JOB
     environment: prod
+    DEPLOY_ENV: prod
+    COLO: east
+    cronos_spec:
+      <<: *DEFAULT_SPEC
+      schedule: "R/2015-08-01T21:30/PT24H"
+  - <<: *DEFAULT_JOB
+    environment: prod
+    DEPLOY_ENV: prod
+    COLO: west
     cronos_spec:
       <<: *DEFAULT_SPEC
       schedule: "R/2015-08-01T21:30/PT24H"
