--- a/examples/simple-chronos.yml
+++ b/examples/simple-chronos.yml
@@ -1,7 +1,7 @@
 version: alpha1
 applications:
   - kind: Chronos
-    cronos_spec:
+    chronos_spec:
       name: "ray-test"
       schedule: "R/2015-01-25T21:00/PT24H"
       scheduleTimeZone: "PST"
