reworded version checking, fixed issue with how printf was used

--- a/examples/bamboo-ex.yml
+++ b/examples/bamboo-ex.yml
@@ -20,7 +20,7 @@ default_job: &DEFAULT_JOB
             protocol: "tcp"
         forcePullImage: false
 
-version: alpha1
+version: 1.0
 deploy_vars:
   DEPLOY_ENV:
     - dev
